Added WLib dependency

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: ${project.artifactId}
 author: WizardlyBump17
 main: com.wizardlybump17.nosee.${project.artifactId}
 version: ${project.version}
+softdepend: [WLib]
 commands:
   vanish:
     permission: nosee.vanish
